markdown/1.x/en/ff-paging-dropdown.md
## Overview
The `ff-paging-dropdown` acts like the `ff-paging` element, but is displayed as a dropdown.

You can access the value of a paging item with the **{{caption}}** syntax.

**Note:** If you want to configure the number of possible pages shown in the dropdown, refer to your
FactFinder-UI backend -> Basic Settings -> Result listing -> Paging (Number of Links)

```html
<ff-paging-dropdown>
    <ff-paging-item>{{caption}}</ff-paging-item>
</ff-paging-dropdown>
```

### show-selected

When the attribute `show-selected` is set on the `ff-paging-dropdown`, the dropdown contains the currently selected element.

```html
<ff-paging-dropdown show-selected>
    <ff-paging-item>{{caption}}</ff-paging-item>
</ff-paging-dropdown>
```

## paging-item

In difference to an `ff-paging` element the `ff-paging-dropdown` accepts only one `ff-paging-item` as a template for all generated pages. 

**NOTE:** All `ff-paging-item`s generated by the `ff-paging-dropdown` element will have a
type attribute like `&lt;ff-paging-item type=&quot;pageLink&quot;&gt;` except the currently selected one.
The selected one will have a type attribute like `&lt;ff-paging-item type=&quot;currentLink&quot;&gt;`

```html
<ff-paging-dropdown show-selected>
    <ff-paging-item>{{caption}}</ff-paging-item>
</ff-paging-dropdown>
```